--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <title>Document</title>
  </head>
  <body>
-    <h1>Angela Yu's Portfolio</h1>
-    <h2>i'm a Web developer</h2>
+    <h1>Aman's Portfolio</h1>
+    <h2>Learning web dev</h2>
     <hr>
     <br>
     <a href="./public/movie-ranking.html">Movie ranking project</a>
